[workspace]
members = ["mcp-client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = "4.5.35"
config = "0.15.11"
eyre = "0.6.12"
is-terminal = "0.4.16"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
shadow-rs = "1.1.1"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
