[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
config.workspace = true
eyre.workspace = true
is-terminal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
shadow-rs.workspace = true
rmcp = { workspace = true, features = [
  "client",
  "transport-child-process",
  "transport-sse",
] }

[build-dependencies]
shadow-rs.workspace = true
